--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,32 +1,35 @@
-.App {
-    text-align: center;
+.app {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 10% 50px auto 50px;
+    grid-template-areas:
+        "header"
+        "nav"
+        "article"
+        "footer";
 }
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
+header {
+    grid-area: header;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #751430;
+    color: #ffffff;
 }
 
-.App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
-    color: white;
+nav {
+    grid-area: nav;
+    background-color: #751430;
 }
 
-.App-title {
-    font-size: 1.5em;
+article {
+    grid-area: article;
 }
 
-.App-intro {
-    font-size: large;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+footer {
+    grid-area: footer;
+    background-color: #f0f0f0;
+    box-shadow: 0 -1px 7px 0 #c2c5cdbf;
 }
