- use fetchCurrencyRates action to pre-fetch data before currency selection is complete - disable select currency drop-up while data is fetching

--- a/frontend/src/components/footer/dropup/DropUp.css
+++ b/frontend/src/components/footer/dropup/DropUp.css
@@ -7,6 +7,10 @@
     outline: none;
 }
 
+.drop-up.disabled {
+    color: #707070;
+}
+
 .drop-up .selected-option {
     display: flex;
     align-items: center;
