--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -62,3 +62,23 @@ footer {
     align-items: center;
     z-index: 1;
 }
+
+footer > div {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer a, footer a:visited {
+    display: flex;
+    align-items: center;
+    color: inherit;
+    text-decoration: none;
+    height: 50px;
+    padding: 0 15px 0 10px;
+}
+
+footer a:hover, footer a:focus {
+    background-color: #e0e0e0;
+}
